# i-flow

./: .gitignore  .gitlab-ci.yml  MC_int_plots.ipynb  README.md  ROC.nb  VEGAS_com.py  bijector.ipynb  bijector_christina.ipynb  bijector_plot.ipynb  cut.py  cut_rect.py  debug_6dim.py  i-flow_test.py  iflow_test.py  integrate_example.py  integrator.py  piecewise coupling transform.ipynb  piecewise.py  piecewiseUnet.py  piecewiseUnet_one_hot.py  piecewise_const_bin.py  piecewise_coupling_transform.ipynb  pytest.ini  run_foam.py  setup.py  sherpa-2.2.7.total.patch  testing.ipynb  vegas_com.py
3jet_example/: channels.py  comix.py  integrator.py  integrator_channel.py  piecewiseUnet_channel.py  piecewiseUnet_one_blob.py  piecewise_splitVW.py  run_sherpa.py  run_sherpa_channel.py  vector.py
AddOns/: tensorflow.patch
AddOns/Tensorflow/: Foam.C  Foam.H  Foam_Interface.C  Interface.C  Makefile.am  Makefile.in  MathTools.H  My_Limits.H  Random.C  Random.H  Tools.H  train.py
DensityEstimation/: RnD_dataset.ipynb  blind_learn.py
Integrator/: integrator.py  piecewise.py
docker/: Dockerfile
docs/: conf.py  flow.integration.rst  flow.rst  flow.splines.rst  index.rst
flatmc/: .flatmc.py.swp  algorithm1_stefan.py  flatmc.py  qcd.py  vector.py
flow/: __init__.py  couplings.py  integrator.py  integrator_spline.py  integrator_tf20.py  piecewise.py  piecewise_tf20.py
iflow/: memory.py
integration/: Sherpa_References.tex  channels.py  comix.py  integrator.py  matrix.py  piecewise.py  piecewiseUnet_one_hot.py  sherpa.py  sherpa2.py  test.txt  vector.py  weights_trained.txt  (+3 more)
(+99 files in other folders)
